@@ -12,6 +12,7 @@
 	* More interesting wizard quest (vampires, home with trees and less square clouds)
 	* YAFM for dragons sitting on objects (based on work by Jordan DeLong - see bilious.alt.org/?193)
 	* Improved Beartraps 1.0 by Malcolm Ryan ( http://bilious.alt.org/?143 )
+	* Better zoos and courtrooms by "L" (Leon Arnott) ( http://l.j-factor.com/nethack/mkroom.diff )
 
 2012-04-01  UnNetHack 4.0.0
 	* Uncursed and blessed scrolls of magic mapping reveal secret doors
